new h2 and buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 <body>
     
     <div id="header">
-        <h1>Let's play with destiny of Carrie Bradshaw</h1>
+        <h1>LET'S PLAY WITH DESTINY OF CARRIE</h1>
     </div>
      
+    <div id="image-container">
+    <img src="love-triangle.png" alt="Love triangle" width="600px" id="myPicture">
+    </div>
+
+    <div id="header">
+        <h2>WHOM SHE HAS TO CHOOSE?</h2>
+    </div>
+
+    <div id="btn">
+    <button id="one">JOHN</button>
+    <button id="two">AIDAN</button>
+    </div>
+
 <script src="index.js"></script>
 </body>
 </html>
