--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destiny Game</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -14,7 +17,7 @@
     </div>
      
     <div id="image-container">
-    <img src="love-triangle.png" alt="Love triangle" width="600px" id="myPicture">
+    <img src="love-triangle.png" alt="Love triangle" width="550px" id="myPicture">
     </div>
 
     <div id="header">
